--- a/package.json
+++ b/package.json
@@ -42,6 +42,10 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.5"
+    "@fortawesome/free-regular-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "tailwindcss": "^3.4.5",
+    "zustand": "^4.5.4"
   }
 }
