--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,11 @@
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@/components": ["./src/components"],
+      "@/db": ["./src/db"],
+      "@/store": ["./src/store"],
+      "@/utils": ["./src/utils"]
     },
     "allowJs": true,
     "skipLibCheck": true,
