--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "todo-board",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,6 +15,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.0",
     "react-scripts": "5.0.1",
+    "sonner": "^1.5.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
