--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
       "@/*": ["src/*"],
       "@components/*": ["src/components/*"],
       "@db/*": ["src/db/*"],
+      "@types/*": ["src/types/*"],
       "@store/*": ["src/store/*"],
       "@utils/*": ["src/utils/*"]
     },
