--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@supabase/supabase-js": "^2.44.4",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.101",
@@ -51,6 +51,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@jest/test-result": "^29.7.0",
+    "dotenv": "^16.4.5",
     "tailwindcss": "^3.4.5",
     "zustand": "^4.5.4"
   }
