Router update list

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "zod": "^3.23.8"
   },
   "scripts": {
-    "start": "vite",
+    "dev": "vite",
     "build": "vite build",
     "test": "vite test"
   },
