--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 # Update these with your Supabase details from your project settings > API
 # https://app.supabase.com/project/_/settings/api
-REACT_APP_SUPABASE_URL=
-REACT_APP_SUPABASE_ANON_KEY=
+VITE_APP_SUPABASE_URL=
+VITE_APP_SUPABASE_ANON_KEY=
