--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "test": "vite test"
+    "test": "vite test",
+    "lint": "eslint --max-warnings=10 src"
   },
   "eslintConfig": {
     "extends": [
@@ -51,8 +52,11 @@
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
     "dotenv": "^16.4.5",
+    "eslint": "^8.57.0",
+    "eslint-config-react-app": "^7.0.1",
     "tailwindcss": "^3.4.5",
     "vite": "^5.4.2",
+    "vite-plugin-eslint": "^1.8.1",
     "zustand": "^4.5.4"
   }
 }
